--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -11,6 +11,7 @@
     %link{:rel => "stylesheet", :href => "#{url_for '/libs/bootstrap/dist/css/bootstrap.min.css'}", :type => "text/css"}
     %link{:rel => "stylesheet", :href => "#{url_for '/libs/jplayer/skin/blue.monday/jplayer.blue.monday.css'}", :type => "text/css" }
     %link{:rel => "stylesheet", :href => "#{url_for '/css/default.css'}", :type => "text/css", :media => "screen" }
+    %link{rel:"shortcut icon",href:"//patf.net/images/bemused.ico"}
     %script{:type => "text/javascript", :src => "#{url_for '/libs/bootstrap/dist/js/bootstrap.min.js'}"}
     %script{:type => "text/javascript", :src => "#{url_for '/libs/jplayer/jquery.jplayer/jquery.jplayer.js'}"}
     %script{:type => "text/javascript", :src => "#{url_for '/libs/jplayer/add-on/jplayer.playlist.js'}"}
