--- a/app/views/upload.html.haml
+++ b/app/views/upload.html.haml
@@ -6,14 +6,29 @@
   .input-group
     %span.input-group-addon
       Artist
-    %input.form-control{type:"text", name: "artist_name"}
+    %input#artist.form-control{type:"text", name: "artist_name"}
   .input-group
     %span.input-group-addon
       Album
-    %input.form-control{type:"text", name: "album_name"}
+    %input#album.form-control{type:"text", name: "album_name"}
   .input-group
     %input.btn.btn-default.btn-lg{type:"submit", value:"upload"}
 
 -unless params["info"].nil?
   .text
     =params["info"]
+:javascript
+  $('#album').autocomplete({
+    serviceUrl: '#{url_for "/searchalbums"}',
+    paramName: 'q',
+    minChars: 1,
+    lookupLimit: 50,
+    autoSelectFirst: true,
+  });
+  $('#artist').autocomplete({
+    serviceUrl: '#{url_for "/searchartists"}',
+    paramName: 'q',
+    minChars: 1,
+    lookupLimit: 50,
+    autoSelectFirst: true,
+  });
