--- a/app/views/album.html.haml
+++ b/app/views/album.html.haml
@@ -94,10 +94,10 @@
               $.ajax({type: "GET", url: obj.mp3.replace("stream","log")});
               $('.navbar-info').html("                                   \
                 <a href='#{url_for("/artist/#{album.artist.id}")}'>      \
-                  <span class='artist-title'>#{album.artist.name}</span> \
+                  <span class='artist-title'>#{shorten album.artist.name, 20}</span> \
                 </a>>                                                    \
                 <a href='#{url_for("/album/#{album.id}")}'>              \
-                  <span class='album-title'>#{album.title}</span>        \
+                  <span class='album-title'>#{shorten album.title, 20}</span>        \
                 </a>>                                                    \
                 <span class='track-title'>" + obj.title + "</span>");
                $(document).prop("title", obj.title);
@@ -108,10 +108,10 @@
     $(document).ready(function() {
       $('.navbar-info').html("                        \
         <a href='#{url_for("/artist/#{album.artist.id}")}'>      \
-          <span class='artist-title'>#{album.artist.name}</span> \
+          <span class='artist-title'>#{shorten album.artist.name, 20}</span> \
         </a>>                                                    \
         <a href='#{url_for("/album/#{album.id}")}'>      \
-          <span class='album-title'>#{album.title}</span> \
+          <span class='album-title'>#{shorten album.title, 20}</span> \
         </a>");
     });
 
