--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -32,7 +32,7 @@
       .collapse.navbar-collapse#navbar-collapse
         %form.navbar-form.navbar-left{id: "search", action: "#{url_for("/search")}", method: "GET"}
           .form-group
-            %input.form-control{type: "TEXT", id: "q", name: "q", autofocus: true}
+            %input.form-control{type: "TEXT", id: "q", name: "q", autofocus: true, placeholder: "Search"}
         %ul.nav.navbar-brand
           %li
             %span.navbar-info
