--- a/public/css/default.css
+++ b/public/css/default.css
@@ -46,3 +46,12 @@ body {
   border: 1px solid #f8f8f8;
   font-weight:bold;
 }
+
+.playlist {
+  text-align:center;
+  min-width:150px;
+  min-height:100px;
+  border: 1px solid #f8f8f8;
+  border-radius:5px;
+  padding: 15px;
+}
