--- a/app/views/list.html.haml
+++ b/app/views/list.html.haml
@@ -1,6 +1,6 @@
-%a.btn.btn-primary{href:"#{prev}"}
+%a.btn.btn-primary{href:"#{url_for("#{prev}")}"}
   <<
-%a.btn.btn-primary{href:"#{nxt}"}
+%a.btn.btn-primary{href:"#{url_for("#{nxt}")}"}
   >>
 %table.table
   %thead
