--- a/app/views/album.html.haml
+++ b/app/views/album.html.haml
@@ -60,6 +60,9 @@
 
     var timer;
     var myPlaylist
+    function toggle_visible(obj) {
+      obj.is(':visible') ?  obj.fadeOut() : obj.fadeIn();
+    }
 
     $(document).ready(function() {
       document.title = "#{album.title}";
@@ -76,15 +79,8 @@
         wmode: "window"
       });  
     });
-    $(document).mousemove(function() {
-      if(timer) {
-        clearTimeout(timer);
-        timer=0;
-        $('#jp_container_1').fadeIn();
-      }
-      timer = setTimeout(function() {
-        $('#jp_container_1').fadeOut()
-      }, 15000)
+    $(document).keypress(function(event) {
+      if(event.which == 112) { toggle_visible($('#jp_container_1')); }
     });
     $("#jquery_jplayer_1").bind($.jPlayer.event.play, function (event) {
         var current = myPlaylist.current,
