--- a/app/views/playlists.html.haml
+++ b/app/views/playlists.html.haml
@@ -1,11 +1,8 @@
-.playlists
-  -playlists.each do |playlist|
-    .item.playlist
-      %a{href: "#{url_for("/playlist/#{playlist.id}")}"}
-        %div
-          %img{title: "#{playlist.name}", src: "#{url_for "/images/#{playlist.image_path}"}"}
-        %div
-          =playlist.name
+-playlists.each do |playlist|
+  .playlist
+    %a.item{href: "#{url_for("/playlist/#{playlist.id}")}"}
+      %div
+        %img{title: "#{playlist.name}", src: "#{url_for "/images/#{playlist.image_path}"}"}
 %form{method: "POST", action:"#{url_for("/playlists/new")}"}
   .input-group.input-group-lg
     %span.input-group-addon
@@ -15,10 +12,10 @@
     %input.btn.btn-default.btn-lg{type:"Submit", value:"Submit"}
   
 :javascript
-  var container = document.querySelector('.playlists');
+  var container = document.querySelector('.container');
   var msnry = new Masonry( container, {
     // options
-    columnWidth: 180,
+    columnWidth: 200,
     itemSelector: '.item'
   });
   imagesLoaded(container, function() {
