--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -8,7 +8,7 @@
     %meta{:name=>"apple-mobile-web-app-capable", :content=>"yes"}
     %script{:type => "text/javascript", :src => "#{url_for('/libs/jquery/dist/jquery.min.js')}"}
     %link{:rel => "stylesheet", :href => "//fonts.googleapis.com/css?family=Cabin", :type => "text/css", :media => "all"}
-    %link{href:'http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext',rel:'stylesheet',type:'text/css'}
+    %link{href:'//fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext',rel:'stylesheet',type:'text/css'}
     %link{:rel => "stylesheet", :href => "#{url_for '/libs/bootstrap/dist/css/bootstrap.min.css'}", :type => "text/css"}
     %link{:rel => "stylesheet", :href => "#{url_for '/libs/jplayer/skin/blue.monday/jplayer.blue.monday.css'}", :type => "text/css" }
     %link{:rel => "stylesheet", :href => "#{url_for '/css/default.css'}", :type => "text/css", :media => "screen" }
