--- a/app/views/admin/playlist.html.haml
+++ b/app/views/admin/playlist.html.haml
@@ -25,12 +25,12 @@
   .input-group.input-group-lg
     %input.btn.btn-default.btn-lg{type:"Submit", value:"Submit"}
 .tracks
-  -model.tracks.each do |track|
+  -model.playlist_tracks.each do |playlist_track|
     .input-group.input-group-lg
       %span.input-group-addon
         &nbsp;
       %span.form-control
-        #{track.title}
+        #{playlist_track.track.title}
 :javascript
   $('#track').autocomplete({
     serviceUrl: '#{url_for "/searchtracks"}',
