disable keypress for admin pages

--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -18,6 +18,9 @@
     %script{type: "text/javascript", src: "#{url_for "/libs/masonry/dist/masonry.pkgd.js"}"}
     %script{type: "text/javascript", src: "#{url_for "/libs/imagesloaded/imagesloaded.pkgd.min.js"}"}
     %script{type: "text/javascript", src: "#{url_for "/libs/devbridge-autocomplete/dist/jquery.autocomplete.min.js"}"}
+    %script
+      //default is to enable keypress functions unless page opts out
+      var keypress_disable=false;
   %body
     %nav.navbar.navbar-default#nav{role: "navigation"}
       .navbar-header
