--- a/app/views/admin/album.html.haml
+++ b/app/views/admin/album.html.haml
@@ -21,6 +21,7 @@
     %input.form-control{type:"text", name:"image_name", value: "#{model.image_path}"}
   .input-group.input-group-lg
     %input.btn.btn-default.btn-lg{type:"Submit", value:"Submit"}
-
+:javascript
+  keypress_disable=true;
 
   
