--- a/app/views/admin/artist.html.haml
+++ b/app/views/admin/artist.html.haml
@@ -21,4 +21,6 @@
   .input-group.input-group-lg
     .submit
       %input.btn.btn-default.btn-lg{type:"Submit", value:"Set Image"}
+:javascript
+  keypress_disable=true;
 
