--- a/app/views/admin/model.html.haml
+++ b/app/views/admin/model.html.haml
@@ -9,3 +9,5 @@
       %input.form-control{type:"text", name:"#{k}", value: "#{v}"}
   .submit
     %input.btn.btn-default.btn-lg{type:"Submit", value:"Submit"}
+:javascript
+  keypress_disable=true;
