disable keypress functionality for artist  edits

--- a/app/views/artist.html.haml
+++ b/app/views/artist.html.haml
@@ -9,6 +9,7 @@
   %a.item{href: "#{url_for("/admin/artist/#{artist.id}")}"}
     Edit
 :javascript
+  keypress_disable=true;
   var container = document.querySelector('.albums');
   var msnry = new Masonry( container, {
     // options
