--- a/app/views/admin/album_tracks.html.haml
+++ b/app/views/admin/album_tracks.html.haml
@@ -1,5 +1,5 @@
 -model.tracks.each do |track|
   .track
     =track.title
-    %a{href: "/admin/track/#{track.id}"}
+    %a{href: "#{url_for("/admin/track/#{track.id}")}"}
       Edit
