--- a/public/css/default.css
+++ b/public/css/default.css
@@ -58,3 +58,12 @@ body {
 .sp-top-lg {
   margin-top: 2em;
 }
+
+.row.no-pad {
+    margin-right:0;
+      margin-left:0;
+}
+.row.no-pad > [class*='col-'] {
+    padding-right:0;
+      padding-left:0;
+}
