save changes on blur

--- a/app/views/admin/album.html.haml
+++ b/app/views/admin/album.html.haml
@@ -36,11 +36,9 @@
   %form{class: "form#{track.id}"}
     .row.no-pad
       .col-md-1
-        %input.col-md-4.form-control{type: 'text', name: 'track_number', value: "#{track.track_number}"}
+        %input.col-md-4.form-control{type: 'text', name: 'track_number', value: "#{track.track_number}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {post(#{track.id})}"}
       .col-md-6
-        %input.form-control{type: 'text', name: 'title', value: "#{track.title}"}
-      .col-md-2
-        %input.col-.md-4.form-control.btn.btn-primary{type: 'Button', value: 'Save', onClick: "post(#{track.id})"}
+        %input.form-control{type: 'text', name: 'title', value: "#{track.title}", onFocus: "this.dirty=false;", onChange: "this.dirty = true", onBlur: "if(this.dirty) {post(#{track.id})}"}
 :javascript
   keypress_disable=true;
   function post(id) {
