--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -40,7 +40,7 @@
             %span.navbar-info
     .container#content
       =yield
-    %div.row#footer
+    %div.sp-bottom-sm.row#footer
       %div.container.footer
         A 
         %a{href:"https://patf.net"}
