--- a/app/views/admin/album.html.haml
+++ b/app/views/admin/album.html.haml
@@ -28,6 +28,8 @@
 .row.sp-top-sm.no-pad
   .col-md-1
     TrackNum
+  .col-md-1
+    AlbumId
   .col-md-6
     Title
 -model.tracks.each do |track|
@@ -35,8 +37,12 @@
     .row.no-pad
       .col-md-1
         %input.col-md-4.form-control{type: 'text', name: 'track_number', value: "#{track.track_number}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track(#{track.id})}"}
+      .col-md-1
+        %input.col-md-4.form-control{type: 'text', name: 'album_id', value: "#{track.album_id}" , onFocus: "this.dirty=false", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track(#{track.id})}"}
       .col-md-6
         %input.form-control{type: 'text', name: 'title', value: "#{track.title}", onFocus: "this.dirty=false;", onChange: "this.dirty = true", onBlur: "if(this.dirty) {save_track(#{track.id})}"}
+      .col-md-1
+        %input.btn.btn-warning{type: 'button', onClick:"if(confirm('delete track?')) {delete_track(#{track.id})}", value: "delete"}
 :javascript
   keypress_disable=true;
   function save_track(id) {
@@ -57,6 +63,12 @@
     return post(form, url);
   }
 
+  function delete_track(id) {
+    var url = "#{url_for('/admin/track/')}" + id;
+    $('.trackform' + id).remove();
+    return del(url);
+  }
+
   function post(form, url) {
     $.ajax( {
         url: url,
@@ -64,6 +76,13 @@
         method: 'post',
     })
     .done(function(msg) {
+    });
+  }
+
+  function del(url) {
+    $.ajax({
+      url: url,
+      method: 'delete'
     });
   }
                   
