--- a/app/views/playlist.html.haml
+++ b/app/views/playlist.html.haml
@@ -52,7 +52,7 @@
     %a.item{href: "#{url_for("/admin/playlist/#{playlist.id}")}"}
       Edit
 :javascript
-        document.getElementById("content").style.background="url('#{url_for "/images/" + (playlist.image_path || "")}')";
+        document.getElementById("content").style.background="url('#{url_for "/images/albums/" + (playlist.image_path || "")}')";
         document.getElementById("content").style.backgroundPosition="0px 0px";
         document.getElementById("content").style.backgroundSize="contain";
         document.getElementById("content").style.backgroundRepeat="no-repeat";
