--- a/app/views/radio.html.haml
+++ b/app/views/radio.html.haml
@@ -49,7 +49,7 @@
         Update Required
       To play the media you will need to either update your browser to a recent version
 :javascript
-        document.getElementById("content").style.background="url('#{url_for "/images/" + (playlist.image_path || "")}')";
+        document.getElementById("content").style.background="url('#{url_for "/images/albums/" + (playlist.image_path || "")}')";
         document.getElementById("content").style.backgroundPosition="0px 0px";
         document.getElementById("content").style.backgroundSize="contain";
         document.getElementById("content").style.backgroundRepeat="no-repeat";
