--- a/app/views/layout.html.haml
+++ b/app/views/layout.html.haml
@@ -19,7 +19,7 @@
     %script{type: "text/javascript", src: "#{url_for "/libs/devbridge-autocomplete/dist/jquery.autocomplete.min.js"}"}
     %script
       //default is to enable keypress functions unless page opts out
-      var keypress_disable=false;
+      var keypress_enable=true;
   %body
     %nav.navbar.navbar-default#nav{role: "navigation"}
       .navbar-header
