--- a/app/views/admin/model.html.haml
+++ b/app/views/admin/model.html.haml
@@ -10,4 +10,4 @@
   .submit
     %input.btn.btn-default.btn-lg{type:"Submit", value:"Submit"}
 :javascript
-  keypress_disable=true;
+  keypress_enable=false;
