--- a/app/views/album.html.haml
+++ b/app/views/album.html.haml
@@ -51,6 +51,9 @@
   .edit
     %a.item{href: "#{url_for("/admin/album/#{album.id}")}"}
       Edit
+.row
+  .col-xs-12.col-md-6.sp-top-sm#summary
+
 :javascript
     document.getElementById("content").style.background="url('#{url_for "/images/albums/" + (album.image || "")}')";
     document.getElementById("content").style.backgroundPosition="0px 0px";
@@ -64,15 +67,15 @@
       myPlaylist = new jPlayerPlaylist({
         jPlayer: "#jquery_jplayer_1",
         cssSelectorAncestor: "#jp_container_1"
-      }, 
+      },
       [
         #{ album.playlist }
-      ], 
+      ],
       {
         swfPath: "http://patf.net/js",
         supplied: "mp3",
         wmode: "window"
-      });  
+      });
     });
     $("#jquery_jplayer_1").bind($.jPlayer.event.play, function (event) {
         var current = myPlaylist.current,
@@ -103,5 +106,16 @@
         <a href='#{url_for("/album/#{album.id}")}' title='#{album.title}'>      \
           <span class='album-title'>#{shorten album.title, 20}</span> \
         </a>");
+      get_summary(#{album.id});
     });
+
+    function get_summary(id) {
+      $.getJSON("#{url_for("/album/#{album.id}/summary")}")
+      .done(function(data) {
+          $('#summary').append(data.summary);
+        })
+      .fail(function(data) {
+        alert("fail");
+        });
+    }
 
