better error handling for wikipedia lookups

--- a/app/views/album.html.haml
+++ b/app/views/album.html.haml
@@ -115,7 +115,7 @@
           $('#summary').append(data.summary);
         })
       .fail(function(data) {
-        alert("fail");
+        console.log("error:" + data);
         });
     }
 
